<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_restart"
        android:title="@string/menu_restart"
        android:orderInCategory="100"
        android:onClick="menuRestartClick" />
    
    <item android:id="@+id/menu_main"
        android:title="@string/menu_main"
        android:orderInCategory="101"
        android:onClick="menuMainClick" />
<!--     
    <item android:id="@+id/menu_languages"
        android:title="@string/menu_languages"
        android:orderInCategory="102"
        android:onClick="menuLanugagesClick" />
     -->
    <item android:id="@+id/menu_awards"
        android:title="@string/menu_awards"
        android:orderInCategory="103"
        android:onClick="menuAwardsClick" />
    
    <item android:id="@+id/menu_rooms"
        android:title="@string/menu_rooms"
        android:orderInCategory="104"
        android:onClick="menuRoomsClick" />
</menu>
