<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_awards"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/awards_subtitle"
        android:textSize="25sp" />

    <ListView
        android:id="@+id/awardsList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/footer"
        style="@android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="20.0px"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="scanImage"
            android:text="@string/menu_scan"
            android:minHeight="20.0px" />

        <Button
            android:id="@+id/mainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="showMainActivity"
            android:text="@string/menu_main" />

        <Button
            android:id="@+id/roomsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="showRoomsActivity"
            android:text="@string/menu_rooms" />
    </LinearLayout>

</LinearLayout>